--- a/_layouts/new_default.html
+++ b/_layouts/new_default.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://kelpoftruth.com/style.css">
+    <link rel="stylesheet" href="https://kelpoftruth.com/assets/style.css">
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/languages/go.min.js"></script>
@@ -84,5 +84,5 @@
         </footer>
     </main>
 </body>
-<script src="https://kelpoftruth.com/script.js"></script>
+<script src="https://kelpoftruth.com/assets/script.js"></script>
 </html>
