--- a/_layouts/new_default.html
+++ b/_layouts/new_default.html
@@ -60,6 +60,14 @@
     </header>
     <main>
         <article>
+            <h1>{{page.title}}</h1>
+            <label class="date">{{dates[0]}}</label>
+            <ul class="tags">
+                {% for tag in page.tags %}
+                <li class="tag"><a href="https://kelpoftruth.com/articles/tags?name={{tag}}">{{tag}}</a></li>
+                {% endfor %}
+            </ul>
+            <div style="height: 3rem;"></div>
           {{content}}
         </article>
         <footer>
