--- a/_layouts/new_default.html
+++ b/_layouts/new_default.html
@@ -67,6 +67,9 @@
                 <li class="tag"><a href="https://kelpoftruth.com/articles/tags?name={{tag}}">{{tag}}</a></li>
                 {% endfor %}
             </ul>
+            <p>
+                {{page.description}}
+            </p>
             <div style="height: 3rem;"></div>
           {{content}}
         </article>
