--- a/_layouts/new_articles.html
+++ b/_layouts/new_articles.html
@@ -15,8 +15,13 @@
             {% for post in site.posts %}
             <li>
                 <a href="/articles{{ post.url | prepend: baseurl }}">
-                <label>{{ post.title }}</label>
-                <p>{{ post.description }}</p>
+                <h1>{{ post.title }}</h1>
+                <p>{{ post.date }}</p>
+                <ul class="tags">
+                {% for tag in page.tags %}
+                    <li class="tag"><a href="https://kelpoftruth.com/articles/tags?name={{tag}}">{{tag}}</a></li>
+                {% endfor %}
+                </ul>
                 </a>
             </li>
             {% endfor %}
