--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {% include header.html %}
     <main>
         <article>
+            {% assign dates = {{page.date}} | split: " " %}
             <h1>{{page.title}}</h1>
             <label class="date">{{dates[0]}}</label>
             <ul class="tags">
