--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
         <article>
             {% assign dates = {{page.date}} | split: " " %}
             <h1>{{page.title}}</h1>
-            <label class="date">{{dates[0]}}</label>
+            {% assign date_detail = {{dates[0]}} | split: "/" %}
+            <label class="date">{{date_detail[0}}年{{date_detail[1]}}月{{date_detail[2]}}日</label>
             <ul class="tags">
                 {% for tag in page.tags %}
                 <li class="tag"><a href="https://kelpoftruth.com/articles/tags?name={{tag}}">{{tag}}</a></li>
