--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,5 +29,5 @@
         {% include footer.html %}
     </main>
 </body>
-<script src="https://kelpoftruth.com/assets/script.js"></script>
+<script src="https://kelpoftruth.com/articles/assets/script.js"></script>
 </html>
