--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     {% include head.html %}
+    <style rel="stylesheet" href="https://kelpoftruth.com/articles/assets/css/articles.css">
 </head>
 <div id="scrollbar">
     <div id="scrolltrack"></div>
