--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -1,2 +1,29 @@
 @charset "utf-8";
 
+.articles{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.articles li{
+    width: 90%;
+    margin: calc(5% - 15px);
+    border: 1px solid var(--b-3);
+    padding: 30px;
+    border-radius: 15px;
+}
+.articles li a{
+    text-decoration: none;
+}
+.articles li a:hover{
+    text-decoration: underline;
+}
+.articles li a h2{
+    font-size: 25px;
+    line-height: 1.5em;
+    margin: 0;
+    font-weight: bold;
+}
+.articles li a span{
+    font-size: 18px;
+}
