--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -19,7 +19,7 @@
                 <h1>{{ post.title }}</h1>
                 {% assign dates = {{post.date}} | split: " " %}
                 {% assign date_detail = {{dates[0]}} | split: "-" %}
-                <label class="date">{{date_detail[0]}}年{{date_detail[1]}}月{{date_detail[2]}}日</label>
+                <span class="date">{{date_detail[0]}}年{{date_detail[1]}}月{{date_detail[2]}}日</span>
                 <ul class="tags">
                 {% for tag in page.tags %}
                     <li class="tag"><a href="https://kelpoftruth.com/articles/tags?name={{tag}}">{{tag}}</a></li>
