--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -32,7 +32,7 @@
 }
 @media screen and (max-width: 100svh){
     .articles li{
-        width: 80%;
-        margin: calc(10% - 15px);
+        width: 75svw;
+        margin: 0;
     }
 }
