--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     {% include head.html %}
+    <link rel="stylesheet" href="https://kelpoftruth.com/articles/assets/css/style.css">
 </head>
 <div id="scrollbar">
     <div id="scrolltrack"></div>
