--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,5 +30,6 @@
         {% include footer.html %}
     </main>
 </body>
+<script src="https://kelpoftruth.com/assets/script.js"></script>
 <script src="https://kelpoftruth.com/articles/assets/js/script.js"></script>
 </html>
