--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -33,5 +33,5 @@
         {% include footer.html %}
     </main>
 </body>
-<script src="https://kelpoftruth.com/articles/assets/js/script.js"></script>
+<script src="https://kelpoftruth.com/assets/script.js"></script>
 </html>
