--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="Expires" content="86400">
 <title>{{page.title}}</title>
 <meta name="description" content="{{page.description}}">
 <style id="css-theme"></style>
