--- a/assets/css/articles.css
+++ b/assets/css/articles.css
@@ -3,10 +3,10 @@
 .articles{
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 2rem;
 }
 .articles li{
     width: 90%;
@@ -26,6 +26,12 @@
     line-height: 1.5em;
     margin: 0;
     font-weight: bold;
+    height: 3em;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
 }
 .articles li a span{
     font-size: 18px;
@@ -33,6 +39,5 @@
 @media screen and (max-width: 100svh){
     .articles li{
         width: 75svw;
-        margin: 0;
     }
 }
