--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
 article{
     font-size: 16px;
 }
+article h2{
+    font-size: 1.25em;
+}
 article .tags{
     padding-left: 0;
     margin-left: 0;
