--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
     <main>
         <article>
             {% assign dates = {{page.date}} | split: " " %}
+            <div id="thumbnail">
+                <img src="{{page.thumbnail}}" >
+            </div>
             <h1>{{page.title}}</h1>
             {% assign date_detail = {{dates[0]}} | split: "-" %}
             <label class="date">{{date_detail[0]}}年{{date_detail[1]}}月{{date_detail[2]}}日</label>
