--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,15 @@ article h1{
 article h2{
     font-size: 1.25em;
 }
+article #thumbnail{
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+article #thumbnail img{
+    max-width: 100% !important;
+    width: 100%;
+    margin: 0 !important;
+}
 article .tags{
     padding-left: 0;
     margin-left: 0;
