--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,14 @@
 <meta http-equiv="Expires" content="86400">
 <title>{{page.title}}</title>
 <meta name="description" content="{{page.description}}">
+<!--OGP TAG-->
+<meta property="og:site_name" content="kelpoftruth.com" />
+<meta property="og:title" content="{{page.title}}" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="https://kelpoftruth.com/articles{{page.url}}" />
+<meta property="og:image" content="{{page.thumbnail}}" />
+<meta property="og:description" content="{{page.description}}" />
+    
 <style id="css-theme"></style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
