--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 <meta property="og:url" content="https://kelpoftruth.com/articles{{page.url}}" />
 <meta property="og:image" content="{{page.thumbnail}}" />
 <meta property="og:description" content="{{page.description}}" />
-    
+<!--Styles-->
 <style id="css-theme"></style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +19,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=dark_mode,light_mode,search" />
 <link rel="stylesheet" href="https://kelpoftruth.com/assets/style.css">
+<!--MathJax-->
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/languages/go.min.js"></script>
